--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             media="(min-width:688px)"
             srcset="./assets/images/illustration-sign-up-desktop.svg"
           />
-          <img src="./assets/images/illustration-sign-up-mobile.svg" />
+          <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
         </picture>
       </section>
 
